deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
spec:
  selector:
    matchLabels:
      app: java-app
  replicas: 4  # Reduzi de 8 para 2 para economizar recursos
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: robelio/java-sample-app:latest  # SEU usuário DockerHub
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi  # Reduzido para a máquina menor
            limits:
              cpu: 200m
              memory: 256Mi  # Reduzido para a máquina menor
---
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
spec:
  type: LoadBalancer  # Mudei de ClusterIP para LoadBalancer para acesso externo
  ports:
    - port: 80        # Mudei para porta 80 (mais comum para web)
      targetPort: 8080
      protocol: TCP
  selector:
    app: java-app
